--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "vue": "^3.3.4",
-    "vue-draggable-next": "^2.2.1",
+    "vue-draggable-next": "^2.2.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
